# O-QT-OECD-QSAR-Toolbox-AI-assistant

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  app.py  cleanup_summary.md  oqt_tutorial.md  pyproject.toml  requirements.txt  run_with_logging.sh  test_gpt5_integration.py
.github/workflows/: ci.yml  tests.yml
components/: results.py  search.py
src/oqt_assistant/: __init__.py  __main__.py  app.py  cli.py
src/oqt_assistant/components/: __init__.py  guided_wizard.py  results.py  search.py  wizard.py
src/oqt_assistant/utils/: __init__.py  data_formatter.py  filters.py  hit_selection.py  key_studies.py  llm_provider.py  llm_utils.py  openai_responses_chat.py  pdf_generator.py  prompts.yaml  qprf_enrichment.py  qsar_api.py  qsar_models.py  structure_3d.py  wizard_state.py
src/qsar_assistant/: __init__.py  app.py  cli.py
src/qsar_assistant/components/: __init__.py  results.py
src/qsar_assistant/utils/: data_formatter.py  llm_utils.py  prompts.yaml  qsar_api.py
tests/: README.md  __init__.py  conftest.py  test_api_behavior.py  test_app.py  test_cli.py  test_data_formatter.py  test_hit_selection.py  test_integration.py  test_llm_utils.py  test_qsar_api.py
utils/: api_client.py  data_formatter.py  llm_utils.py  prompts.yaml  qsar_api.py  report_generator.py
